Fixed bug with map position on contact page and extra padding

--- a/themes/orangebrick/style.css
+++ b/themes/orangebrick/style.css
@@ -933,7 +933,6 @@ div.word-cloud {
 div.googlemap, 
 aside div.googlemap {
 	border: 2px solid #222;
-	padding: 5px;
 	margin-bottom: 1em;
 }
 
